# previsia-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/01_pipeline/: 01_bronze_ingestion.ipynb  02_silver_cleaning.ipynb  03_gold_features.ipynb  04_supabase_load.ipynb  05_eda_analytics.ipynb
notebooks/02_ml/: 01_classifier_success.ipynb  02_payment_default.ipynb  03_recovery_amount.ipynb  04_survival.ipynb
scripts/: validate.py
sql/: 001_schema.sql
src/: config.py
src/api/: db.py  main.py  schemas.py  security.py
src/api/routers/: analytics.py  auth.py  insights.py  me.py  predict.py
src/insights/: explainer.py  llm.py  portfolio_summary.py  text_to_sql.py
src/shared/: parsing.py
