[project]
name = "previsia-backend"
version = "0.1.0"
description = "Plataforma de inteligência preditiva em cobrança de dívidas"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",

    # Data engineering
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "pyarrow>=17.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "shap>=0.46.0",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "lifelines>=0.29.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.4.0",

    # Visualization
    "plotly>=5.24.0",
    "matplotlib>=3.9.0",

    # LLM / Insights
    "groq>=0.11.0",
    "jinja2>=3.1.0",

    # Supabase
    "supabase>=2.9.0",

    # Data quality
    "great-expectations>=1.2.0",
]

[project.scripts]
pipeline = "src.pipeline.run:main"
train = "src.ml.train.run:main"
serve = "src.api.main:start"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "jupyterlab>=4.3.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "ipywidgets>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
